--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>IKRA AHMED PAAKIZAH HOTEL</title>
 	<link rel="stylesheet" href="C:\Users\ikra ahmed\Desktop\exact\css\bootstrap.min.css">
 	
-	<link rel="stylesheet" href="C:\Users\ikra ahmed\Desktop\exact\css\style.css">
+	<link rel="stylesheet" href="https://github.com/IKRA786/restaurant-website/blob/gh-pages/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&display=swap" rel="stylesheet">
 </head>
